Edit FundTransfer portion

--- a/PFD Challenge 1/Views/Home/Index.cshtml
+++ b/PFD Challenge 1/Views/Home/Index.cshtml
@@ -1,93 +1,5 @@
 ﻿@{
-    Layout = null;
+    ViewData["Title"] = "Login";
 }
-<!DOCTYPE html>
-<html>
-<head>
-    <!-- Use Unicode character encoding - multi-language compatibity -->
-    <meta charset="utf-8">
-    <!-- Set the initial view zooming scale for mobile device -->
-    <meta name="viewport" content="width = device-width,
-    initial-scale = 1" />
-    <title>Judgeish</title>
-    <!-- Reference to customized styling for this website -->
-    <link rel="stylesheet" type="text/css" href="~/css/site.css">
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@500&display=swap" rel="stylesheet">
-
-    <style>
-        body {
-            background-color: #E7625F;
-            font: Poppins;
-        }
-
-        #container {
-            text-align: center;
-        }
-
-        .every {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            align-items: center;
-            align-content: center;
-            align-self: center;
-        }
-
-        h1 {
-            font-family: 'Fira Sans', sans-serif;
-        }
-
-        h2 {
-            font-family: 'Fira Sans', sans-serif;
-        }
-
-        p {
-            font-family: 'Mukta', sans-serif;
-        }
-
-    </style>
-</head>
-
-<body>
-    <header>
-        @await Html.PartialAsync("_HomeMenu.cshtml")
-    </header>
-    <div class="container" id="mainContainer2">
-        <div class="first-container">
-            <div style="text-align: center; margin-top:10%">
-                <img id="imgLogo" src="~/images/Home Page (after login).jpeg"
-                     style="width: 50%" />
-                <div class="container">
-                    <div class="row">
-                        <div class="col text-center">
-                            <div class="container">
-                                <form>
-                                    <div class="form-group" style="color: white">
-                                        <label for="balance">What you have (SGD)</label>
-                                        <input type="text" class="form-control" id="balance">
-                                    </div>
-                                    <div class="form-group" style="color: white">
-                                        <label for="activity">Your activity</label>
-                                        <input type="text" class="form-control" id="activity">
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
-
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-</body>
-</html>
