--- a/PFD Challenge 1/Views/Shared/_NavBar.cshtml
+++ b/PFD Challenge 1/Views/Shared/_NavBar.cshtml
@@ -15,11 +15,7 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <!--Orginal version-->
-                <a class="nav-link" href="#home">OCBC</a>
-            </li>
-            <li class="nav-item">
-                <!--Orginal version-->
-                <a class="nav-link" href="~/FundTransferMain/Index">Transfer</a>
+                <a class="nav-link" href="~/FundTransfer/FundTransfer">Transfer</a>
             </li>
         </ul>
     </div>
