Update link for css stylesheet

--- a/PFD Challenge 1/Views/FundTransfer/FundTransfer.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/FundTransfer.cshtml
@@ -5,7 +5,7 @@
 
 @section css{ 
 @*Add specific css script here*@
-<style src="~/css/futuretransfer.css"></style>
+<link rel="stylesheet" href="~/css/futuretransfer.css" />
 }
 <div class="container" id="mainContainer2">
     <div class="first-container">
