--- a/PFD Challenge 1/Views/FundTransfer/FundTransfer.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/FundTransfer.cshtml
@@ -3,45 +3,58 @@
     Remember to declare model used
 *@
 
-@section css{ 
-@*Add specific css script here*@
-<link rel="stylesheet" href="~/css/futuretransfer.css" />
+@model IEnumerable<PFD_Challenge_1.Models.BankAccount>
+
+@section css{
+    @*Add specific css script here*@
+    <link rel="stylesheet" href="~/css/futuretransfer.css" />
 }
-<div class="container" id="mainContainer2">
-    <div class="first-container">
-        <div style="text-align: center; margin-top:10%">
-            <img id="imgLogo" src="~/images/Home Page (after login).jpeg"
-                 style="width: 50%" />
-            <div class="container">
-                <div class="row">
-                    <div class="col text-center">
-                        <div class="container">
-                            <form>
-                                <div class="form-group" style="color: white">
-                                    <label for="balance">What you have (SGD)</label>
-                                    <input type="text" class="form-control" id="balance">
-                                </div>
-                                <div class="form-group" style="color: white">
-                                    <label for="activity">Your activity</label>
-                                    <input type="text" class="form-control" id="activity">
-                                </div>
-                            </form>
+
+
+
+    <div class="container" id="mainContainer2">
+        <div class="first-container">
+            <div style="text-align: center; margin-top:10%">
+                <img id="imgLogo" src="~/images/Home Page (after login).jpeg"
+                     style="width: 50%" />
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col text-center">
+                <div class="container">
+                    <form>
+                        <div class="form-group" style="color: white">
+                            <label for="balance">What you have (SGD)</label>
+                            <input type="text" class="form-control" id="balance">
                         </div>
-                        <!-- Login Button -->
-                        <div class="every" style="padding-right:110px;padding-left:20px; display: inline-block;">
-                            <div class="form-group row">
-                                <div class="col-sm-9 offset-sm-3">
-                                    <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;display: inline-block;" class="btn third">Make a Transfer</button>
-                                </div>
-                            </div>
+                        <div class="form-group" style="color: white">
+                            <label for="activity">Your activity</label>
+                            <input type="text" class="form-control" id="activity">
+                        </div>
+                    </form>
+                </div>
+                <!-- Login Button -->
+                <div class="every" style="padding-right:110px;padding-left:20px; display: inline-block;">
+                    <div class="form-group row">
+                        <div class="col-sm-9 offset-sm-3">
+                            <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;display: inline-block;" class="btn third">Make a Transfer</button>
+                            <a href='~/FundTransfer/FundTransferReview'>Make a transfer</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-@section scripts{ 
-@*Add JavaScripts specifically for this view here*@ 
-<script src="~/js/futuretransfer.js"></script>
+
+
+
+
+@section scripts{
+    @*Add JavaScripts specifically for this view here*@
+    <script src="~/js/futuretransfer.js"></script>
 }
+
+
