--- a/PFD Challenge 1/Views/FundTransfer/FundTransfer.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/FundTransfer.cshtml
@@ -3,6 +3,8 @@
     Remember to declare model used
 *@
 
+@model PFD_Challenge_1.Models.FundTransferVM
+
 @section css{
     @*Add specific css script here*@
     <link rel="stylesheet" href="~/css/futuretransfer.css" />
@@ -15,7 +17,6 @@
         </div>
     </div>
 </div>
-
 <div class="container">
     <div class="row">
         <div class="col text-center">
@@ -23,11 +24,20 @@
                 <form>
                     <div class="form-group" style="color: white">
                         <label for="balance">What you have (SGD)</label>
-                        <input type="text" class="form-control" id="balance">
+                        <div>@Html.DisplayFor(model => model.account.Balance)</div>
                     </div>
                     <div class="form-group" style="color: white">
                         <label for="activity">Your activity</label>
-                        <input type="text" class="form-control" id="activity">
+                        @{ if (Model.transactions.Amount == 0)
+                            {
+                                <div>No transactions</div>
+                            }
+                            else
+                            {
+                                <div><span>@Html.DisplayFor(model => model.transactions.TimeTransfer)</span> $<span>@Html.DisplayFor(model => model.transactions.Amount)</span></div>
+                            }
+
+                        }
                     </div>
                 </form>
             </div>
@@ -35,8 +45,7 @@
             <div class="every" style="padding-right:110px;padding-left:20px; display: inline-block;">
                 <div class="form-group row">
                     <div class="col-sm-9 offset-sm-3">
-                        <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;display: inline-block;" class="btn third">Make a Transfer</button>
-                        <a href='~/FundTransfer/FundTransferReview'>Make a transfer</a>
+                        <div class="btn">@Html.ActionLink("Make a Transfer", "FundTransferReview", "FundTransfer")</div>
                     </div>
                 </div>
             </div>
