Update Navigation bar for transaction history

--- a/PFD Challenge 1/Views/Shared/_NavBar.cshtml
+++ b/PFD Challenge 1/Views/Shared/_NavBar.cshtml
@@ -17,6 +17,10 @@
                 <!--Orginal version-->
                 <a class="nav-link" href="~/FundTransfer/FundTransfer">Transfer</a>
             </li>
+            <li class="nav-item">
+                <!--Orginal version-->
+                <a class="nav-link" href="~/Transaction/index">History</a>
+            </li>
         </ul>
     </div>
 </nav>
