--- a/PFD Challenge 1/Views/Transaction/Index.cshtml
+++ b/PFD Challenge 1/Views/Transaction/Index.cshtml
@@ -5,10 +5,23 @@
 @{
     foreach (var item in Model)
     {
-        <div class="form-container" style="margin-bottom: 20px;" onclick="location.href = '#'">
-            <div>Sender: @item.Name</div>
-            <div>Amount: $@string.Format("{0:0.00}", item.Amount)</div>
+        if (item.sender)
+        {
+            <div class="form-container" style="margin-bottom: 20px;" onclick="location.href = '#'">
+                <div>Receiver: @item.Name</div>
+                <div>Amount: $@string.Format("{0:0.00}", item.Amount)</div>
 
-        </div>
+            </div>
+        }
+        else
+        {
+            <div class="form-container" style="margin-bottom: 20px;" onclick="location.href = '#'">
+                <div>Sender: @item.Name</div>
+                <div>Amount: $@string.Format("{0:0.00}", item.Amount)</div>
+
+            </div>
+            }
+
+
+        }
     }
-}
