--- a/PFD Challenge 1/Views/Shared/_Layout.cshtml
+++ b/PFD Challenge 1/Views/Shared/_Layout.cshtml
@@ -18,14 +18,15 @@
         </main>
     </div>
 
-    <footer class="footer text-muted">
-        <div class="container" style="text-align:center">
-            &copy; 2021 OCBC <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+    <div class="footer">
+        <img id="imgLogo" src="~/images/Home Page (after login)(1).jpeg"
+             style="width: 100%; height: 60%" />
+    </div>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
+
 </body>
 </html>
