--- a/PFD Challenge 1/wwwroot/css/futuretransfer.css
+++ b/PFD Challenge 1/wwwroot/css/futuretransfer.css
@@ -3,10 +3,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@500&display=swap");
 
 /*Button CSS*/
-.btn a{
+.btn a {
     box-sizing: border-box;
-    background-color: transparent;
-    border: 2px solid white;
+    background-color: #BA2B43;
     border-radius: 0.6em;
     color: white;
     cursor: pointer;
@@ -31,4 +30,26 @@
 
 h1{
     color:white;
+}
+
+/*Input CSS*/
+.input {
+    box-sizing: border-box;
+    background-color: transparent;
+    border: 2px solid white;
+    border-radius: 0.6em;
+    color: white;
+    cursor: pointer;
+    /*display: flex;*/
+    align-self: center;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1;
+    margin: 20px;
+    padding: 1.2em 2.8em;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
 }
