--- a/PFD Challenge 1/Views/Shared/_NavBar.cshtml
+++ b/PFD Challenge 1/Views/Shared/_NavBar.cshtml
@@ -21,6 +21,10 @@
                 <!--Orginal version-->
                 <a class="nav-link" href="~/Transaction/index">History</a>
             </li>
+            <li class="=nav-item">
+                <a class="nav-link" href="~/BatchProcess/index">Schedule Payment</a>
+
+            </li>
         </ul>
     </div>
 </nav>
