--- a/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
@@ -12,9 +12,9 @@
 <div class="container" id="mainContainer2">
     <div class="first-container">
         <div style="text-align: center; margin-top:5%">
-            <img id="imgLogo" src="~/images/FutureTransferReview(1).jpeg"
-                 style="width: 35%" />
-            <h1>Transfer</h1>
+            <img id="imgLogo" src="~/images/FutureTransferReview(2).jpeg"
+                 style="width: 40%" />
+            <h1 sstyle="margin-top:5%">Transfer</h1>
         </div>
     </div>
 </div>
@@ -25,17 +25,23 @@
             <form asp-action="FundTransferReview" style="text-align: center">
                 <div class="container">
 
-                    <div class="form-group" style="color: white">
+                    <div class="form-group" style="color: white; padding-left: 35px">
                         <label for="to">To</label>
-                        <input asp-for="Recipient" type="text" class="form-control" id="to">
+                        <div class="input" style="padding-top: 20px; padding-right: 115px; padding-left: 115px; display: inline-block;">
+                            <input asp-for="Recipient" type="text" class="form-control" id="to">
+                        </div>
                     </div>
-                    <div class="form-group" style="color: white">
+                    <div class="form-group" style="color: white; padding-right: 55px">
                         <label for="accountbalance">Account Balance</label>
-                        <input readonly asp-for="Balance" class="form-control" />
+                        <div class="input" style="padding-top: 20px; padding-right: 115px; padding-left: 115px; display: inline-block;">
+                            <input readonly asp-for="Balance" class="form-control" />
+                        </div>
                     </div>
                     <div class="form-group" style="color: white">
                         <label for="transfer">Transfer</label>
-                        <input asp-for="TransferAmount" type="text" class="form-control" id="transfer">
+                        <div class="input" style="padding-top: 20px; padding-right: 115px; padding-left: 115px; display: inline-block;">
+                            <input asp-for="TransferAmount" type="text" class="form-control" id="transfer">
+                        </div>
                     </div>
                     <div class="form-group form-check-inline" style="margin-top:15px">
                         <div class="form-group" style="color: white">
