--- a/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
@@ -11,10 +11,10 @@
 
 <div class="container" id="mainContainer2">
     <div class="first-container">
-        <div style="text-align: center; margin-top:5%">
-            <img id="imgLogo" src="~/images/FutureTransferReview(2).jpeg"
+        <div style="text-align: center; margin-top:2%">
+            <img id="imgLogo" src="~/images/FutureTransferReview(4).jpg"
                  style="width: 40%" />
-            <h1 sstyle="margin-top:5%">Transfer</h1>
+            <h1 style="margin-top:2%">Transfer</h1>
         </div>
     </div>
 </div>
@@ -24,51 +24,62 @@
         <div class="col text-center">
             <form asp-action="FundTransferReview" style="text-align: center">
                 <div class="container">
-
-                    <div class="form-group" style="color: white; padding-left: 35px">
-                        <label for="to">To</label>
-                        <div class="input" style="padding-top: 20px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                            <input asp-for="Recipient" type="text" class="form-control" id="to">
+                    <div class="form-group" style="color: white">
+                        <div class="to" style="padding-top:2px">
+                            <label for="to">To</label>
                         </div>
-                    </div>
-                    <div class="form-group" style="color: white; padding-right: 55px">
-                        <label for="accountbalance">Account Balance</label>
-                        <div class="input" style="padding-top: 20px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                            <input readonly asp-for="Balance" class="form-control" />
+                        <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
+                            <input asp-for="Recipient" type="text" class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
                         </div>
                     </div>
                     <div class="form-group" style="color: white">
-                        <label for="transfer">Transfer</label>
-                        <div class="input" style="padding-top: 20px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                            <input asp-for="TransferAmount" type="text" class="form-control" id="transfer">
+                        <div class="accountbalance" style="padding-top:2px">
+                            <label for="accountbalance">Account Balance</label>
+                        </div>
+                        <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 60px; padding-left: 60px; display: inline-block;">
+                            <input readonly asp-for="Balance" class="form-control" id="accountbalance" style="padding-left: 125px; background-color: #E7625F" />
                         </div>
                     </div>
-                    <div class="form-group form-check-inline" style="margin-top:15px">
+                    <div class="form-group" style="color: white">
+                        <div class="transfer" style="padding-top:2px">
+                            <label for="transfer">Transfer Amount</label>
+                        </div>
+                        <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
+                            <input asp-for="TransferAmount" type="text" class="form-control" id="transfer" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
+                        </div>
+                    </div>
+                    <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
                         <div class="form-group" style="color: white">
-                            <div>Date</div>
-                            <div>
-                                <label class="col-form-label">
-                                    @if (Model.FutureTransfer == "false")
-                                    {
-                                        <input name="futureTransfer" type="radio" value="immediate" class="form-check-input" id="immediateRadio" checked="checked" />
-                                    }
-                                    else
-                                    {
-                                        <input name="futureTransfer" type="radio" value="immediate" class="form-check-input" id="immediateRadio" />
-                                    }
+                            <div class="date">Date</div>
+                            <div tyle="padding-top: 20px;">
+                                <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 35px; padding-left: 35px; display: inline-block;">
+                                    <label class="col-form-label">
+                                        @if (Model.FutureTransfer == "false")
+                                        {
+                                            <input name="futureTransfer" type="radio" value="immediate" class="form-check-input" id="immediateRadio" checked="checked" />
+                                        }
+                                        else
+                                        {
+                                            <input name="futureTransfer" type="radio" value="immediate" class="form-check-input" id="immediateRadio" />
+                                        }
+                                    </label>
                                     <span style="font-weight:normal; padding-right:20px">Immediate</span>
-                                </label>
-                                <label class="col-form-label">
-                                    @if (Model.FutureTransfer == "false")
-                                    {
-                                        <input name="futureTransfer" type="radio" value="future" class="form-check-input" id="futureRadio" />
-                                    }
-                                    else
-                                    {
-                                        <input name="futureTransfer" type="radio" value="future" class="form-check-input" id="futureRadio" checked="checked" />
-                                    }
-                                    <span style="font-weight:normal; padding-right:20px">Schedule</span>
-                                </label>
+                                </div>
+                                <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 35px; padding-left: 35px; display: inline-block;">
+                                    <label class="col-form-label">
+                                        @if (Model.FutureTransfer == "false")
+                                        {
+                                            <input name="futureTransfer" type="radio" value="future" class="form-check-input" id="futureRadio" />
+                                        }
+                                        else
+                                        {
+                                            <input name="futureTransfer" type="radio" value="future" class="form-check-input" id="futureRadio" checked="checked" />
+                                        }
+                                        <span style="font-weight:normal; padding-right:20px">Schedule</span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div>
                                 <input asp-for="FutureTransfer" hidden readonly />
                             </div>
                         </div>
@@ -78,11 +89,11 @@
                         <input asp-for="TimeTransfer" /><br />
                         <span asp-validation-for="TimeTransfer" class="text-danger small"></span>
                     </div>
-                    <div class="every" style="padding-right:50px;padding-left:50px; display: inline-block;">
-                        <div><button action="submit" onclick="document.getElementById('id01').style.display='block'" style="width:auto;display: inline-block;" class="btn2">Confirm</button></div>
-                    </div>
                 </div>
             </form>
+            <div class="every" style="padding-top: 0px; padding-right:50px;padding-left:50px; display: inline-block;">
+                <div><button action="submit" onclick="document.getElementById('id01').style.display='block'" style="width:auto;display: inline-block;" class="btn2">Confirm</button></div>
+            </div>
         </div>
     </div>
 </div>
