--- a/PFD Challenge 1/wwwroot/css/site.css
+++ b/PFD Challenge 1/wwwroot/css/site.css
@@ -30,3 +30,12 @@ h2 {
 p {
     font-family: 'Mukta', sans-serif;
 }
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+}
