--- a/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
@@ -41,8 +41,8 @@
                         </div>
                     </div>
                     <div class="form-group" style="color: white">
-                        <div class="transfer" style="padding-top:2px">
-                            <label for="transfer">Transfer Amount</label>
+                        <div class="date" style="padding-top:2px">
+                            Transfer Amount
                         </div>
                         <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
                             <input asp-for="TransferAmount" type="text" class="form-control" id="transfer" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
