--- a/PFD Challenge 1/Views/Home/Index.cshtml
+++ b/PFD Challenge 1/Views/Home/Index.cshtml
@@ -5,9 +5,6 @@
 
 <div class="container-fluid">
     <div class="row align-items-center">
-        <div class="col" style="margin:50px; height:70vh;">
-            <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_yupefrh2.json" background="transparent" speed="0.3" loop autoplay></lottie-player>
-        </div>
         <div class="col" style="margin:50px">
             @if (Context.Session.GetString("NRIC")== null)
             {
@@ -16,9 +13,11 @@
         </div>
     </div>
 </div>
+
+<!--This is for the modal(pop-up) for webcam facial detection-->
 <div class="modal fade" id="facialRecog" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content" style="height:auto;width:auto;">
+        <div class="modal-content"style="height:auto;width:auto;">
             <div class="container">
                 <div>Please look into the camera and wait.</div>
                 <div id="livecam" class="cam">
