--- a/PFD Challenge 1/Views/Shared/_Layout.cshtml
+++ b/PFD Challenge 1/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         @await Html.PartialAsync("_NavBar.cshtml")
     </header>
-    <div class="container">
+    <div class="container min-vh-100">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
