--- a/PFD Challenge 1/Views/FundTransfer/Confirmation.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/Confirmation.cshtml
@@ -2,14 +2,14 @@
     View for Transaction Confirmation
 *@
 @model PFD_Challenge_1.Models.TransferConfirmation
-<form asp-action="FundTransferReview" style="text-align: center">
+<form asp-action="Confirmation" style="text-align: center">
     <div class="container">
         <div class="form-group" style="color: white">
             <div class="to" style="padding-top:2px">
                 <label for="to">To</label>
             </div>
             <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                <input asp-for="Recipient" type="text" class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
+                <input asp-for="Recipient" type="text" readonly class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
             </div>
         </div>
         <div class="form-group" style="color: white">
@@ -17,13 +17,29 @@
                 <label for="transfer">Transfer Amount</label>
             </div>
             <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                <input asp-for="TransferAmount" type="text" class="form-control" id="transfer" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
+                <input asp-for="TransferAmount" type="text"readonly class="form-control" id="transfer" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
             </div>
         </div>
-        <div id="futureTime">
-            <label asp-for="TimeTransfer" class="form-label"></label>
-            <input asp-for="TimeTransfer" /><br />
-            <span asp-validation-for="TimeTransfer" class="text-danger small"></span>
+        <div>
+    <input hidden readonly asp-for="BankAccount" />
+    <input hidden readonly asp-for="FutureTransfer" />
         </div>
+        @if (Model.FutureTransfer == "false")
+        {
+            <div id="futureTime">
+                <label asp-for="TimeTransfer" class="form-label"></label>
+                <div>Immediate</div>
+            </div>
+        }
+        else
+        {
+            <div id="futureTime">
+                <label asp-for="TimeTransfer" class="form-label"></label>
+                <input asp-for="TimeTransfer" readonly/>
+            </div>
+        }
+
+        
     </div>
+    <div><button action ="submit">Confirm Transfer</button></div>
 </form>
