--- a/PFD Challenge 1/Views/FundTransfer/Confirmation.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/Confirmation.cshtml
@@ -1,28 +1,38 @@
 ﻿@*
     View for Transaction Confirmation
 *@
+
+@section css{
+    @*Add specific css script here*@
+    <link rel="stylesheet" href="~/css/futuretransfer.css" />
+}
+
 @model PFD_Challenge_1.Models.TransferConfirmation
 <form asp-action="Confirmation" style="text-align: center">
     <div class="container">
-        <div class="form-group" style="color: white">
-            <div class="to" style="padding-top:2px">
-                <label for="to">To</label>
-            </div>
-            <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                <input asp-for="Recipient" type="text" readonly class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
+        <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
+            <div class="form-group" style="color: white">
+                <div class="to" style="padding-top: 2px;">
+                    <div class="to" style="background-color: #AA1945">To</div>
+                </div>
+                <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
+                    <input asp-for="Recipient" type="text" readonly class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
+                </div>
             </div>
         </div>
-        <div class="form-group" style="color: white">
-            <div class="transfer" style="padding-top:2px">
-                <label for="transfer">Transfer Amount</label>
-            </div>
-            <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                <input asp-for="TransferAmount" type="text"readonly class="form-control" id="transfer" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
+        <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
+            <div class="form-group" style="color: white">
+                <div class="transferamount" style="padding-top: 2px;">
+                    <div class="transferamount" style="background-color: #AA1945">Transfer Amount</div>
+                </div>
+                <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
+                    <input asp-for="TransferAmount" type="text" readonly class="form-control" id="transfer" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
+                </div>
             </div>
         </div>
         <div>
-    <input hidden readonly asp-for="BankAccount" />
-    <input hidden readonly asp-for="FutureTransfer" />
+            <input hidden readonly asp-for="BankAccount" />
+            <input hidden readonly asp-for="FutureTransfer" />
         </div>
         @if (Model.FutureTransfer == "false")
         {
@@ -35,11 +45,11 @@
         {
             <div id="futureTime">
                 <label asp-for="TimeTransfer" class="form-label"></label>
-                <input asp-for="TimeTransfer" readonly/>
+                <input asp-for="TimeTransfer" readonly />
             </div>
         }
 
-        
+
     </div>
-    <div><button action ="submit">Confirm Transfer</button></div>
+    <div><button action="submit">Confirm Transfer</button></div>
 </form>
