--- a/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
@@ -13,7 +13,7 @@
     <div class="first-container">
         <div style="text-align: center; margin-top:2%">
             <img id="imgLogo" src="~/images/FutureTransferReview(4).jpg"
-                 style="width: 40%" />
+                 style="width: 33%" />
             <h1 style="margin-top:2%">Transfer</h1>
         </div>
     </div>
@@ -24,33 +24,41 @@
         <div class="col text-center">
             <form asp-action="FundTransferReview" style="text-align: center">
                 <div class="container">
-                    <div class="form-group" style="color: white">
-                        <div class="to" style="padding-top:2px">
-                            <label for="to">To</label>
-                        </div>
-                        <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                            <input asp-for="Recipient" type="text" class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
-                        </div>
-                    </div>
-                    <div class="form-group" style="color: white">
-                        <div class="accountbalance" style="padding-top:2px">
-                            <label for="accountbalance">Account Balance</label>
-                        </div>
-                        <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 60px; padding-left: 60px; display: inline-block;">
-                            <input readonly asp-for="Balance" class="form-control" id="accountbalance" style="padding-left: 125px; background-color: #E7625F" />
-                        </div>
-                    </div>
-                    <div class="form-group" style="color: white">
-                        <div class="date" style="padding-top:2px">
-                            Transfer Amount
-                        </div>
-                        <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                            <input asp-for="TransferAmount" type="text" class="form-control" id="transfer" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
+                    <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
+                        <div class="form-group" style="color: white">
+                            <div class="to" style="padding-top: 2px;">
+                                <div class="to" style="background-color: #AA1945">To</div>
+                            </div>
+                            <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
+                                <input asp-for="Recipient" type="text" class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
+                            </div>
                         </div>
                     </div>
                     <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
                         <div class="form-group" style="color: white">
-                            <div class="date">Date</div>
+                            <div class="accountbalance" style="padding-top: 2px;">
+                                <div class="accountbalance" style="background-color: #AA1945">Account Balance</div>
+                            </div>
+                            <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 60px; padding-left: 60px; display: inline-block;">
+                                <input readonly asp-for="Balance" class="form-control" id="accountbalance" style="padding-left: 125px; background-color: #E7625F" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
+                        <div class="form-group" style="color: white">
+                            <div class="transferamount" style="padding-top: 2px;">
+                                <div class="transferamount" style="background-color: #AA1945">Transfer Amount</div>
+                            </div>
+                            <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
+                                <input asp-for="TransferAmount" type="text" class="form-control" id="transfer" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
+                        <div class="form-group" style="color: white">
+                            <div class="date" style="padding-top: 2px; padding-left:10px">
+                                <div class="date" style="background-color: #AA1945">Date</div>
+                            </div>
                             <div tyle="padding-top: 20px;">
                                 <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 35px; padding-left: 35px; display: inline-block;">
                                     <label class="col-form-label">
